2006-08-29  Dmitry Dulepov  <typo3@accio.lv>

	* Performance enhancement in t3lib/class.t3lib_tstemplate.php: use UPDATE/INSERT_on_update_fail instead of DELETE/INSERT for cache_pagesection.
	* Show domain name in the page tree if is_siteroot is set for page and "options.pageTree.showDomainNameWithTitle" is set in user TSConfig

2006-08-25  Michael Stucki  <michael@typo3.org>

	* Fixed bug #4076: Skin creates invalid HTML markup
	* Fixed bug #1454: Cookie lifetime set in localconf.php will be ignored. Thanks to Dietrich Heise and Jeff Segars.
	* Fixed bug #3922: config.spamProtectEmailAddresses doesn't respect config.removeDefaultJS setting. Thanks to Benjamin Mack.
	* Added a new parameter to tslib_pibase->pi_classParam() which may contain classes that should not be prefixed.

2006-08-24  Michael Stucki  <michael@typo3.org>

	* !!! Changed default value of $TYPO3_CONF_VARS[SYS][devIPmask] to "127.0.0.1,::1" (removed "192.168.*")
	* Fixed bug #1236: 404 error while using the new content wizard
	* Fixed bug #3909: TYPO3_SSL does not detect valid SSL session
	* Fixed bug #3973: pageNotFound_handling=TRUE is interpreted as URL

2006-08-23  Michael Stucki  <michael@typo3.org>

	* Fixed bug #3960: Display correct version number in Install Tool (only when authenticated)
	* Fixed bug #4073: Extension manager doesn't find extensions if the search string contains a trailing space
	* Fixed bug #3990: $BE_USER property "disableTabInTextarea" is not respected

2006-08-19  Dmitry Dulepov  <typo3@accio.lv>

	* Fix bug 4037: Link from Google AdWords fails due to wrong alias handling

2006-08-19 Ingmar Schlecht  <ingmar@typo3.org>

	* Parly fixed #4013: New records in non-default language are displayed in list-module in localization view too now even if they don't have a parent record in the default language.

2006-08-17 Ingmar Schlecht  <ingmar@typo3.org>
